wrapped headings in a div tag to fix misalignment

--- a/starter/assets/css/style.css
+++ b/starter/assets/css/style.css
@@ -118,7 +118,6 @@ Main section
 /* About me paragraph styling*/
 .about-paragraph {
   padding-left: 15px;
-  margin-left: 5px;
   font-size: 20px;
   clear: none;
 }
